# kaggle-playground-series-s4e12

./: .gitignore  LICENSE  README.md  download_data.py  insurance_premium_prediction.ipynb  pyproject.toml  submit.sh  test.ipynb
experiments/: experiment_catboost.ipynb  experiment_xgboost.ipynb
