[project]
name = "kaggle-playground-series-s4e12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "cudf-cu11>=24.12.0",
    "ipykernel>=6.29.5",
    "kaggle>=1.6.17",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scikit-learn==1.5.2",
    "seaborn>=0.13.2",
    "xgboost>=2.1.3",
]
